# WiFi-Testbed-Robots

./: 99-usb-serial.rules  CircleGenerator.py  README.md  SquareGenerator.py  circle.csv  setup  setup.txt  testing  testing~
autobot/catkin_ws/: testing.txt
autobot/catkin_ws/devel/: .rosinstall  setup.sh
autobot/catkin_ws/devel/include/proteus3_compass_hydro/: CompassMsg.h
autobot/catkin_ws/devel/include/proteus3_gps_hydro/: GPSMsg.h
autobot/catkin_ws/devel/lib/outdoor_navigation/: store_navigation_profile
autobot/catkin_ws/devel/lib/proteus3_gps_hydro/: gps
autobot/catkin_ws/src/outdoor_navigation/scripts/: _send_waypoints
autobot/catkin_ws/src/outdoor_navigation/src/: create_waypoint_file.py
autobot/catkin_ws/src/pan_tilt_node/: manifest.xml
autobot/catkin_ws/src/pan_tilt_node/nodes/: driver.py
autobot/catkin_ws/src/proteus3/: manifest.xml
autobot/catkin_ws/src/proteus3_compass/src/: compass.cpp
autobot/catkin_ws/src/proteus3_compass_hydro/: package.xml
autobot/catkin_ws/src/proteus3_compass_hydro/src/: compass.cpp
autobot/catkin_ws/src/proteus3_gps/: manifest.xml
autobot/catkin_ws/src/proteus3_gps/msg/: GPSMsg.msg
autobot/catkin_ws/src/proteus3_gps/src/: gps.cpp
autobot/catkin_ws/src/proteus3_gps_hydro/msg/: GPSMsg.msg
autobot/catkin_ws/src/proteus3_gps_hydro/src/: .gps.cpp.swn  gps.cpp
autobot/catkin_ws/src/proteus3_navigation/launch/: amcl.launch  gmapping_demo.launch
autobot/catkin_ws/src/proteus3_navigation/src/: driver.cpp  microstrain_driver.cpp
autobot/catkin_ws/src/teleop_ackermann_keyboard/: CMakeLists.txt
autobot/catkin_ws/src/teleop_ackermann_keyboard/nodes/: back_forward.py  route_deployment.py  teleop_ackermann_keyboard.py
autobot/catkin_ws/src/traxxas_node/: CMakeLists.txt
autobot/catkin_ws/src/traxxas_node/launch/: bringup.launch
autobots/: wifi.txt
autobots/CompassV2/: SFE_HMC6343.cpp  SFE_HMC6343.cpp~  SFE_HMC6343.h
autobots/USB/: 80-persistent-net.rules
autobots/catkin_ws/: testing.txt
autobots/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
autobots/catkin_ws/devel/include/outdoor_navigation/: NavFlagMsg.h
autobots/catkin_ws/devel/include/proteus3_compass_hydro/: CompassMsg.h
autobots/catkin_ws/devel/include/proteus3_gps_hydro/: GPSMsg.h
autobots/catkin_ws/devel/include/traxxas_node/: AckermannDriveMsg.h  AckermannMonitorMsg.h
autobots/catkin_ws/devel/lib/outdoor_navigation/: store_navigation_profile
autobots/catkin_ws/src/outdoor_navigation/: package.xml
autobots/catkin_ws/src/pan_tilt_node/: mainpage.dox
autobots/catkin_ws/src/proteus3/: .classpath  .project  README.txt  build.gradle
autobots/catkin_ws/src/proteus3_compass/: CMakeLists.txt  mainpage.dox  manifest.xml
autobots/catkin_ws/src/proteus3_compass_hydro/: CMakeLists.txt
autobots/catkin_ws/src/proteus3_gps/: CMakeLists.txt  mainpage.dox
autobots/catkin_ws/src/proteus3_gps_hydro/: CMakeLists.txt
autobots/catkin_ws/src/proteus3_navigation/: CMakeLists.txt
autobots/catkin_ws/src/teleop_ackermann_keyboard/: CMakeLists.txt
autobots/catkin_ws/src/traxxas_node/: CMakeLists.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/include/traxxas_node/: AckermannDriveMsg.h  AckermannMonitorMsg.h
catkin_ws/devel/lib/pkgconfig/: proteus3_compass_hydro.pc  proteus3_gps_hydro.pc  teleop_ackermann_keyboard.pc
catkin_ws/devel/lib/proteus3_compass_hydro/: compass
catkin_ws/devel/lib/proteus3_gps_hydro/: gps  rec_gps
catkin_ws/devel/lib/proteus3_navigation/: microstrain_driver
catkin_ws/src/outdoor_navigation/: CMakeLists.txt
catkin_ws/src/outdoor_navigation/launch/: navigate_multiple_uncoordinated.launch  square_experiment.launch
catkin_ws/src/outdoor_navigation/scripts/: send_waypoints.sh
catkin_ws/src/outdoor_navigation/src/: outdoor_navigation_coordinated.py  outdoor_navigation_single.py
catkin_ws/src/pan_tilt_node/msg/: PanTiltCmd.msg
catkin_ws/src/proteus3/: mainpage.dox
catkin_ws/src/proteus3_compass/msg/: CompassMsg.msg
catkin_ws/src/proteus3_gps_hydro/: CMakeLists.txt
catkin_ws/src/proteus3_gps_hydro/src/: gps.cpp
catkin_ws/src/proteus3_navigation/: CMakeLists.txt
catkin_ws/src/proteus3_navigation/Razor_AHRS_Driver/: Output.ino
catkin_ws/src/proteus3_navigation/launch/: xtion.launch
catkin_ws/src/proteus3_navigation/launch/includes/: _amcl.launch
catkin_ws/src/proteus3_navigation/maps/: ens.yaml  gates.yaml
catkin_ws/src/teleop_ackermann_keyboard/launch/: route_deployment.launch
catkin_ws/src/teleop_ackermann_keyboard/nodes/: back_forward.py
logs/gps_logs/: gps_log  gps_log2
logs/logs/compass/: compass_samples.m  compasslog.txt
(+141 files in other folders)
